// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GithubCorner direction="left" /> 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <a
    aria-label="Open GitHub project"
    className="github-corner"
    href="/"
>
    <svg
        height={80}
        style={
            Object {
                "fill": "#fff",
                "left": 0,
                "position": "absolute",
                "top": 0,
              }
        }
        viewBox="0 0 250 250"
        width={80}
    >
        <path
            className="octo-banner"
            d="M250 0L135 115h-15l-12 27L0 250V0z"
            fill="#151513"
        />
        <path
            className="octo-arm"
            d="M122 109c15-9 9-19 9-19-3-7-2-11-2-11 1-7-3-2-3-2-4 5-2 11-2 11 3 10-5 15-9 16"
            style={
                Object {
                    "WebkitTransformOrigin": "120px 144px",
                    "transformOrigin": "120px 144px",
                  }
            }
        />
        <path
            className="octo-body"
            d="M135 115s-4 2-5 0l-14-14c-3-2-6-3-8-3 8-11 15-24-2-41-5-5-10-7-16-7-1-2-3-7-12-11 0 0-5 3-7 16-4 2-8 5-12 9s-7 8-9 12c-14 4-17 9-17 9 4 8 9 11 11 11 0 6 2 11 7 16 16 16 30 10 41 2 0 3 1 7 5 11l12 11c1 2-1 6-1 6z"
        />
    </svg>
</a>,
  "nodes": Array [
    <a
      aria-label="Open GitHub project"
      className="github-corner"
      href="/"
>
      <svg
            height={80}
            style={
                  Object {
                        "fill": "#fff",
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                      }
            }
            viewBox="0 0 250 250"
            width={80}
      >
            <path
                  className="octo-banner"
                  d="M250 0L135 115h-15l-12 27L0 250V0z"
                  fill="#151513"
            />
            <path
                  className="octo-arm"
                  d="M122 109c15-9 9-19 9-19-3-7-2-11-2-11 1-7-3-2-3-2-4 5-2 11-2 11 3 10-5 15-9 16"
                  style={
                        Object {
                              "WebkitTransformOrigin": "120px 144px",
                              "transformOrigin": "120px 144px",
                            }
                  }
            />
            <path
                  className="octo-body"
                  d="M135 115s-4 2-5 0l-14-14c-3-2-6-3-8-3 8-11 15-24-2-41-5-5-10-7-16-7-1-2-3-7-12-11 0 0-5 3-7 16-4 2-8 5-12 9s-7 8-9 12c-14 4-17 9-17 9 4 8 9 11 11 11 0 6 2 11 7 16 16 16 30 10 41 2 0 3 1 7 5 11l12 11c1 2-1 6-1 6z"
            />
      </svg>
</a>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <GithubCorner
        ariaLabel="Open GitHub project"
        bannerColor="#151513"
        direction="left"
        height={80}
        href="/"
        octoColor="#fff"
        width={80}
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": GithubCorner {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "ariaLabel": "Open GitHub project",
          "bannerColor": "#151513",
          "direction": "left",
          "height": 80,
          "href": "/",
          "octoColor": "#fff",
          "width": 80,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <a
          aria-label="Open GitHub project"
          className="github-corner"
          href="/"
>
          <svg
                    height={80}
                    style={
                              Object {
                                        "fill": "#fff",
                                        "left": 0,
                                        "position": "absolute",
                                        "top": 0,
                                      }
                    }
                    viewBox="0 0 250 250"
                    width={80}
          >
                    <path
                              className="octo-banner"
                              d="M250 0L135 115h-15l-12 27L0 250V0z"
                              fill="#151513"
                    />
                    <path
                              className="octo-arm"
                              d="M122 109c15-9 9-19 9-19-3-7-2-11-2-11 1-7-3-2-3-2-4 5-2 11-2 11 3 10-5 15-9 16"
                              style={
                                        Object {
                                                  "WebkitTransformOrigin": "120px 144px",
                                                  "transformOrigin": "120px 144px",
                                                }
                              }
                    />
                    <path
                              className="octo-body"
                              d="M135 115s-4 2-5 0l-14-14c-3-2-6-3-8-3 8-11 15-24-2-41-5-5-10-7-16-7-1-2-3-7-12-11 0 0-5 3-7 16-4 2-8 5-12 9s-7 8-9 12c-14 4-17 9-17 9 4 8 9 11 11 11 0 6 2 11 7 16 16 16 30 10 41 2 0 3 1 7 5 11l12 11c1 2-1 6-1 6z"
                    />
          </svg>
</a>,
        "_debugID": 4,
        "_renderedOutput": <a
          aria-label="Open GitHub project"
          className="github-corner"
          href="/"
>
          <svg
                    height={80}
                    style={
                              Object {
                                        "fill": "#fff",
                                        "left": 0,
                                        "position": "absolute",
                                        "top": 0,
                                      }
                    }
                    viewBox="0 0 250 250"
                    width={80}
          >
                    <path
                              className="octo-banner"
                              d="M250 0L135 115h-15l-12 27L0 250V0z"
                              fill="#151513"
                    />
                    <path
                              className="octo-arm"
                              d="M122 109c15-9 9-19 9-19-3-7-2-11-2-11 1-7-3-2-3-2-4 5-2 11-2 11 3 10-5 15-9 16"
                              style={
                                        Object {
                                                  "WebkitTransformOrigin": "120px 144px",
                                                  "transformOrigin": "120px 144px",
                                                }
                              }
                    />
                    <path
                              className="octo-body"
                              d="M135 115s-4 2-5 0l-14-14c-3-2-6-3-8-3 8-11 15-24-2-41-5-5-10-7-16-7-1-2-3-7-12-11 0 0-5 3-7 16-4 2-8 5-12 9s-7 8-9 12c-14 4-17 9-17 9 4 8 9 11 11 11 0 6 2 11 7 16 16 16 30 10 41 2 0 3 1 7 5 11l12 11c1 2-1 6-1 6z"
                    />
          </svg>
</a>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <GithubCorner
    ariaLabel="Open GitHub project"
    bannerColor="#151513"
    direction="left"
    height={80}
    href="/"
    octoColor="#fff"
    width={80}
/>,
}
`;

exports[`GithubCorner with non-left directions 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <a
    aria-label="Open GitHub project"
    className="github-corner"
    href="/"
>
    <svg
        height={80}
        style={
            Object {
                "fill": "#fff",
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
        }
        viewBox="0 0 250 250"
        width={80}
    >
        <path
            className="octo-banner"
            d="M0 0l115 115h15l12 27 108 108V0z"
            fill="#151513"
        />
        <path
            className="octo-arm"
            d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
            style={
                Object {
                    "WebkitTransformOrigin": "130px 106px",
                    "transformOrigin": "130px 106px",
                  }
            }
        />
        <path
            className="octo-body"
            d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
        />
    </svg>
</a>,
  "nodes": Array [
    <a
      aria-label="Open GitHub project"
      className="github-corner"
      href="/"
>
      <svg
            height={80}
            style={
                  Object {
                        "fill": "#fff",
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      }
            }
            viewBox="0 0 250 250"
            width={80}
      >
            <path
                  className="octo-banner"
                  d="M0 0l115 115h15l12 27 108 108V0z"
                  fill="#151513"
            />
            <path
                  className="octo-arm"
                  d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
                  style={
                        Object {
                              "WebkitTransformOrigin": "130px 106px",
                              "transformOrigin": "130px 106px",
                            }
                  }
            />
            <path
                  className="octo-body"
                  d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
            />
      </svg>
</a>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <GithubCorner
        ariaLabel="Open GitHub project"
        bannerColor="#151513"
        direction="right"
        height={80}
        href="/"
        octoColor="#fff"
        width={80}
/>,
      "_debugID": 5,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": GithubCorner {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "ariaLabel": "Open GitHub project",
          "bannerColor": "#151513",
          "direction": "right",
          "height": 80,
          "href": "/",
          "octoColor": "#fff",
          "width": 80,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 3,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <a
          aria-label="Open GitHub project"
          className="github-corner"
          href="/"
>
          <svg
                    height={80}
                    style={
                              Object {
                                        "fill": "#fff",
                                        "position": "absolute",
                                        "right": 0,
                                        "top": 0,
                                      }
                    }
                    viewBox="0 0 250 250"
                    width={80}
          >
                    <path
                              className="octo-banner"
                              d="M0 0l115 115h15l12 27 108 108V0z"
                              fill="#151513"
                    />
                    <path
                              className="octo-arm"
                              d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
                              style={
                                        Object {
                                                  "WebkitTransformOrigin": "130px 106px",
                                                  "transformOrigin": "130px 106px",
                                                }
                              }
                    />
                    <path
                              className="octo-body"
                              d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
                    />
          </svg>
</a>,
        "_debugID": 6,
        "_renderedOutput": <a
          aria-label="Open GitHub project"
          className="github-corner"
          href="/"
>
          <svg
                    height={80}
                    style={
                              Object {
                                        "fill": "#fff",
                                        "position": "absolute",
                                        "right": 0,
                                        "top": 0,
                                      }
                    }
                    viewBox="0 0 250 250"
                    width={80}
          >
                    <path
                              className="octo-banner"
                              d="M0 0l115 115h15l12 27 108 108V0z"
                              fill="#151513"
                    />
                    <path
                              className="octo-arm"
                              d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
                              style={
                                        Object {
                                                  "WebkitTransformOrigin": "130px 106px",
                                                  "transformOrigin": "130px 106px",
                                                }
                              }
                    />
                    <path
                              className="octo-body"
                              d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
                    />
          </svg>
</a>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <GithubCorner
    ariaLabel="Open GitHub project"
    bannerColor="#151513"
    direction="right"
    height={80}
    href="/"
    octoColor="#fff"
    width={80}
/>,
}
`;

exports[`GithubCorner with non-left directions 2`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <a
    aria-label="Open GitHub project"
    className="github-corner"
    href="/"
>
    <svg
        height={80}
        style={
            Object {
                "fill": "#fff",
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
        }
        viewBox="0 0 250 250"
        width={80}
    >
        <path
            className="octo-banner"
            d="M0 0l115 115h15l12 27 108 108V0z"
            fill="#151513"
        />
        <path
            className="octo-arm"
            d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
            style={
                Object {
                    "WebkitTransformOrigin": "130px 106px",
                    "transformOrigin": "130px 106px",
                  }
            }
        />
        <path
            className="octo-body"
            d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
        />
    </svg>
</a>,
  "nodes": Array [
    <a
      aria-label="Open GitHub project"
      className="github-corner"
      href="/"
>
      <svg
            height={80}
            style={
                  Object {
                        "fill": "#fff",
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      }
            }
            viewBox="0 0 250 250"
            width={80}
      >
            <path
                  className="octo-banner"
                  d="M0 0l115 115h15l12 27 108 108V0z"
                  fill="#151513"
            />
            <path
                  className="octo-arm"
                  d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
                  style={
                        Object {
                              "WebkitTransformOrigin": "130px 106px",
                              "transformOrigin": "130px 106px",
                            }
                  }
            />
            <path
                  className="octo-body"
                  d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
            />
      </svg>
</a>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <GithubCorner
        ariaLabel="Open GitHub project"
        bannerColor="#151513"
        direction="invalid"
        height={80}
        href="/"
        octoColor="#fff"
        width={80}
/>,
      "_debugID": 7,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": GithubCorner {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "ariaLabel": "Open GitHub project",
          "bannerColor": "#151513",
          "direction": "invalid",
          "height": 80,
          "href": "/",
          "octoColor": "#fff",
          "width": 80,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 4,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <a
          aria-label="Open GitHub project"
          className="github-corner"
          href="/"
>
          <svg
                    height={80}
                    style={
                              Object {
                                        "fill": "#fff",
                                        "position": "absolute",
                                        "right": 0,
                                        "top": 0,
                                      }
                    }
                    viewBox="0 0 250 250"
                    width={80}
          >
                    <path
                              className="octo-banner"
                              d="M0 0l115 115h15l12 27 108 108V0z"
                              fill="#151513"
                    />
                    <path
                              className="octo-arm"
                              d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
                              style={
                                        Object {
                                                  "WebkitTransformOrigin": "130px 106px",
                                                  "transformOrigin": "130px 106px",
                                                }
                              }
                    />
                    <path
                              className="octo-body"
                              d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
                    />
          </svg>
</a>,
        "_debugID": 8,
        "_renderedOutput": <a
          aria-label="Open GitHub project"
          className="github-corner"
          href="/"
>
          <svg
                    height={80}
                    style={
                              Object {
                                        "fill": "#fff",
                                        "position": "absolute",
                                        "right": 0,
                                        "top": 0,
                                      }
                    }
                    viewBox="0 0 250 250"
                    width={80}
          >
                    <path
                              className="octo-banner"
                              d="M0 0l115 115h15l12 27 108 108V0z"
                              fill="#151513"
                    />
                    <path
                              className="octo-arm"
                              d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
                              style={
                                        Object {
                                                  "WebkitTransformOrigin": "130px 106px",
                                                  "transformOrigin": "130px 106px",
                                                }
                              }
                    />
                    <path
                              className="octo-body"
                              d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
                    />
          </svg>
</a>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <GithubCorner
    ariaLabel="Open GitHub project"
    bannerColor="#151513"
    direction="invalid"
    height={80}
    href="/"
    octoColor="#fff"
    width={80}
/>,
}
`;

exports[`default <GithubCorner /> 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <a
    aria-label="Open GitHub project"
    className="github-corner"
    href="/"
>
    <svg
        height={80}
        style={
            Object {
                "fill": "#fff",
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
        }
        viewBox="0 0 250 250"
        width={80}
    >
        <path
            className="octo-banner"
            d="M0 0l115 115h15l12 27 108 108V0z"
            fill="#151513"
        />
        <path
            className="octo-arm"
            d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
            style={
                Object {
                    "WebkitTransformOrigin": "130px 106px",
                    "transformOrigin": "130px 106px",
                  }
            }
        />
        <path
            className="octo-body"
            d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
        />
    </svg>
</a>,
  "nodes": Array [
    <a
      aria-label="Open GitHub project"
      className="github-corner"
      href="/"
>
      <svg
            height={80}
            style={
                  Object {
                        "fill": "#fff",
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      }
            }
            viewBox="0 0 250 250"
            width={80}
      >
            <path
                  className="octo-banner"
                  d="M0 0l115 115h15l12 27 108 108V0z"
                  fill="#151513"
            />
            <path
                  className="octo-arm"
                  d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
                  style={
                        Object {
                              "WebkitTransformOrigin": "130px 106px",
                              "transformOrigin": "130px 106px",
                            }
                  }
            />
            <path
                  className="octo-body"
                  d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
            />
      </svg>
</a>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <GithubCorner
        ariaLabel="Open GitHub project"
        bannerColor="#151513"
        direction="right"
        height={80}
        href="/"
        octoColor="#fff"
        width={80}
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": GithubCorner {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "ariaLabel": "Open GitHub project",
          "bannerColor": "#151513",
          "direction": "right",
          "height": 80,
          "href": "/",
          "octoColor": "#fff",
          "width": 80,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <a
          aria-label="Open GitHub project"
          className="github-corner"
          href="/"
>
          <svg
                    height={80}
                    style={
                              Object {
                                        "fill": "#fff",
                                        "position": "absolute",
                                        "right": 0,
                                        "top": 0,
                                      }
                    }
                    viewBox="0 0 250 250"
                    width={80}
          >
                    <path
                              className="octo-banner"
                              d="M0 0l115 115h15l12 27 108 108V0z"
                              fill="#151513"
                    />
                    <path
                              className="octo-arm"
                              d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
                              style={
                                        Object {
                                                  "WebkitTransformOrigin": "130px 106px",
                                                  "transformOrigin": "130px 106px",
                                                }
                              }
                    />
                    <path
                              className="octo-body"
                              d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
                    />
          </svg>
</a>,
        "_debugID": 2,
        "_renderedOutput": <a
          aria-label="Open GitHub project"
          className="github-corner"
          href="/"
>
          <svg
                    height={80}
                    style={
                              Object {
                                        "fill": "#fff",
                                        "position": "absolute",
                                        "right": 0,
                                        "top": 0,
                                      }
                    }
                    viewBox="0 0 250 250"
                    width={80}
          >
                    <path
                              className="octo-banner"
                              d="M0 0l115 115h15l12 27 108 108V0z"
                              fill="#151513"
                    />
                    <path
                              className="octo-arm"
                              d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
                              style={
                                        Object {
                                                  "WebkitTransformOrigin": "130px 106px",
                                                  "transformOrigin": "130px 106px",
                                                }
                              }
                    />
                    <path
                              className="octo-body"
                              d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
                    />
          </svg>
</a>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <GithubCorner
    ariaLabel="Open GitHub project"
    bannerColor="#151513"
    direction="right"
    height={80}
    href="/"
    octoColor="#fff"
    width={80}
/>,
}
`;

exports[`it mounts 1`] = `"<a href=\\"/\\" class=\\"github-corner\\" aria-label=\\"Open GitHub project\\"><svg width=\\"80\\" height=\\"80\\" viewBox=\\"0 0 250 250\\" style=\\"position: absolute; top: 0px; fill: #fff; right: 0px;\\"><path class=\\"octo-banner\\" d=\\"M0 0l115 115h15l12 27 108 108V0z\\" fill=\\"#151513\\"></path><path class=\\"octo-arm\\" d=\\"M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16\\"></path><path class=\\"octo-body\\" d=\\"M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z\\"></path></svg></a>"`;

exports[`it mounts 2`] = `
Object {
  "headAfter": "<style type=\\"text/css\\" id=\\"____GITHUB_CORNER_SUPER_SECRET___\\">
.github-corner:hover .octo-arm {
  animation: octocat-wave 560ms ease-in-out;
}

@keyframes octocat-wave {
  0% {
    transform: rotate(0deg);
  }

  20% {
    transform: rotate(-25deg);
  }

  40% {
    transform: rotate(10deg);
  }

  60% {
   transform: rotate(-25deg);
  }

  80% {
    transform: rotate(10deg);
  }

  100% {
    transform: rotate(0deg);
  }
}

@media (max-width: 500px) {
    .github-corner:hover .octo-arm {
        animation: none;
    }

    .github-corner .octo-arm {
        animation: octocat-wave 560ms ease-in-out;
    }
}
</style>",
  "headBefore": "",
}
`;

exports[`merge className attribute 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <a
    aria-label="Open GitHub project"
    className="github-corner wow cool"
    href="/"
>
    <svg
        height={80}
        style={
            Object {
                "fill": "#fff",
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
        }
        viewBox="0 0 250 250"
        width={80}
    >
        <path
            className="octo-banner"
            d="M0 0l115 115h15l12 27 108 108V0z"
            fill="#151513"
        />
        <path
            className="octo-arm"
            d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
            style={
                Object {
                    "WebkitTransformOrigin": "130px 106px",
                    "transformOrigin": "130px 106px",
                  }
            }
        />
        <path
            className="octo-body"
            d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
        />
    </svg>
</a>,
  "nodes": Array [
    <a
      aria-label="Open GitHub project"
      className="github-corner wow cool"
      href="/"
>
      <svg
            height={80}
            style={
                  Object {
                        "fill": "#fff",
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      }
            }
            viewBox="0 0 250 250"
            width={80}
      >
            <path
                  className="octo-banner"
                  d="M0 0l115 115h15l12 27 108 108V0z"
                  fill="#151513"
            />
            <path
                  className="octo-arm"
                  d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
                  style={
                        Object {
                              "WebkitTransformOrigin": "130px 106px",
                              "transformOrigin": "130px 106px",
                            }
                  }
            />
            <path
                  className="octo-body"
                  d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
            />
      </svg>
</a>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <GithubCorner
        ariaLabel="Open GitHub project"
        bannerColor="#151513"
        className="wow cool"
        direction="right"
        height={80}
        href="/"
        octoColor="#fff"
        width={80}
/>,
      "_debugID": 11,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": GithubCorner {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "ariaLabel": "Open GitHub project",
          "bannerColor": "#151513",
          "className": "wow cool",
          "direction": "right",
          "height": 80,
          "href": "/",
          "octoColor": "#fff",
          "width": 80,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 6,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <a
          aria-label="Open GitHub project"
          className="github-corner wow cool"
          href="/"
>
          <svg
                    height={80}
                    style={
                              Object {
                                        "fill": "#fff",
                                        "position": "absolute",
                                        "right": 0,
                                        "top": 0,
                                      }
                    }
                    viewBox="0 0 250 250"
                    width={80}
          >
                    <path
                              className="octo-banner"
                              d="M0 0l115 115h15l12 27 108 108V0z"
                              fill="#151513"
                    />
                    <path
                              className="octo-arm"
                              d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
                              style={
                                        Object {
                                                  "WebkitTransformOrigin": "130px 106px",
                                                  "transformOrigin": "130px 106px",
                                                }
                              }
                    />
                    <path
                              className="octo-body"
                              d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
                    />
          </svg>
</a>,
        "_debugID": 12,
        "_renderedOutput": <a
          aria-label="Open GitHub project"
          className="github-corner wow cool"
          href="/"
>
          <svg
                    height={80}
                    style={
                              Object {
                                        "fill": "#fff",
                                        "position": "absolute",
                                        "right": 0,
                                        "top": 0,
                                      }
                    }
                    viewBox="0 0 250 250"
                    width={80}
          >
                    <path
                              className="octo-banner"
                              d="M0 0l115 115h15l12 27 108 108V0z"
                              fill="#151513"
                    />
                    <path
                              className="octo-arm"
                              d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
                              style={
                                        Object {
                                                  "WebkitTransformOrigin": "130px 106px",
                                                  "transformOrigin": "130px 106px",
                                                }
                              }
                    />
                    <path
                              className="octo-body"
                              d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
                    />
          </svg>
</a>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <GithubCorner
    ariaLabel="Open GitHub project"
    bannerColor="#151513"
    className="wow cool"
    direction="right"
    height={80}
    href="/"
    octoColor="#fff"
    width={80}
/>,
}
`;

exports[`styles have already been injected 1`] = `
Object {
  "headAfter": "<style id=\\"____GITHUB_CORNER_SUPER_SECRET___\\">.mock {}</style>",
  "headBefore": "<style id=\\"____GITHUB_CORNER_SUPER_SECRET___\\">.mock {}</style>",
}
`;

exports[`when document.head does not exist 1`] = `"<a href=\\"/\\" class=\\"github-corner\\" aria-label=\\"Open GitHub project\\"><svg width=\\"80\\" height=\\"80\\" viewBox=\\"0 0 250 250\\" style=\\"position: absolute; top: 0px; fill: #fff; right: 0px;\\"><path class=\\"octo-banner\\" d=\\"M0 0l115 115h15l12 27 108 108V0z\\" fill=\\"#151513\\"></path><path class=\\"octo-arm\\" d=\\"M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16\\"></path><path class=\\"octo-body\\" d=\\"M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z\\"></path></svg></a>"`;

exports[`when document.head does not exist 2`] = `
Array [
  Array [
    <style
      type="text/css"
      id="____GITHUB_CORNER_SUPER_SECRET___"
>
      .github-corner:hover .octo-arm { animation: octocat-wave 560ms ease-in-out; } @keyframes octocat-wave { 0% { transform: rotate(0deg); } 20% { transform: rotate(-25deg); } 40% { transform: rotate(10deg); } 60% { transform: rotate(-25deg); } 80% { transform: rotate(10deg); } 100% { transform: rotate(0deg); } } @media (max-width: 500px) { .github-corner:hover .octo-arm { animation: none; } .github-corner .octo-arm { animation: octocat-wave 560ms ease-in-out; } }
</style>,
  ],
]
`;

exports[`when style.stylesheet exists we use cssText 1`] = `
"
.github-corner:hover .octo-arm {
  animation: octocat-wave 560ms ease-in-out;
}

@keyframes octocat-wave {
  0% {
    transform: rotate(0deg);
  }

  20% {
    transform: rotate(-25deg);
  }

  40% {
    transform: rotate(10deg);
  }

  60% {
   transform: rotate(-25deg);
  }

  80% {
    transform: rotate(10deg);
  }

  100% {
    transform: rotate(0deg);
  }
}

@media (max-width: 500px) {
    .github-corner:hover .octo-arm {
        animation: none;
    }

    .github-corner .octo-arm {
        animation: octocat-wave 560ms ease-in-out;
    }
}
"
`;

exports[`with additional props 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <a
    aria-label="Open GitHub project"
    className="github-corner"
    href="/"
    style="display:none"
>
    <svg
        height={80}
        style={
            Object {
                "fill": "#fff",
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
        }
        viewBox="0 0 250 250"
        width={80}
    >
        <path
            className="octo-banner"
            d="M0 0l115 115h15l12 27 108 108V0z"
            fill="#151513"
        />
        <path
            className="octo-arm"
            d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
            style={
                Object {
                    "WebkitTransformOrigin": "130px 106px",
                    "transformOrigin": "130px 106px",
                  }
            }
        />
        <path
            className="octo-body"
            d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
        />
    </svg>
</a>,
  "nodes": Array [
    <a
      aria-label="Open GitHub project"
      className="github-corner"
      href="/"
      style="display:none"
>
      <svg
            height={80}
            style={
                  Object {
                        "fill": "#fff",
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      }
            }
            viewBox="0 0 250 250"
            width={80}
      >
            <path
                  className="octo-banner"
                  d="M0 0l115 115h15l12 27 108 108V0z"
                  fill="#151513"
            />
            <path
                  className="octo-arm"
                  d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
                  style={
                        Object {
                              "WebkitTransformOrigin": "130px 106px",
                              "transformOrigin": "130px 106px",
                            }
                  }
            />
            <path
                  className="octo-body"
                  d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
            />
      </svg>
</a>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <GithubCorner
        ariaLabel="Open GitHub project"
        bannerColor="#151513"
        direction="right"
        height={80}
        href="/"
        octoColor="#fff"
        style="display:none"
        width={80}
/>,
      "_debugID": 9,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": GithubCorner {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "ariaLabel": "Open GitHub project",
          "bannerColor": "#151513",
          "direction": "right",
          "height": 80,
          "href": "/",
          "octoColor": "#fff",
          "style": "display:none",
          "width": 80,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 5,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <a
          aria-label="Open GitHub project"
          className="github-corner"
          href="/"
          style="display:none"
>
          <svg
                    height={80}
                    style={
                              Object {
                                        "fill": "#fff",
                                        "position": "absolute",
                                        "right": 0,
                                        "top": 0,
                                      }
                    }
                    viewBox="0 0 250 250"
                    width={80}
          >
                    <path
                              className="octo-banner"
                              d="M0 0l115 115h15l12 27 108 108V0z"
                              fill="#151513"
                    />
                    <path
                              className="octo-arm"
                              d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
                              style={
                                        Object {
                                                  "WebkitTransformOrigin": "130px 106px",
                                                  "transformOrigin": "130px 106px",
                                                }
                              }
                    />
                    <path
                              className="octo-body"
                              d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
                    />
          </svg>
</a>,
        "_debugID": 10,
        "_renderedOutput": <a
          aria-label="Open GitHub project"
          className="github-corner"
          href="/"
          style="display:none"
>
          <svg
                    height={80}
                    style={
                              Object {
                                        "fill": "#fff",
                                        "position": "absolute",
                                        "right": 0,
                                        "top": 0,
                                      }
                    }
                    viewBox="0 0 250 250"
                    width={80}
          >
                    <path
                              className="octo-banner"
                              d="M0 0l115 115h15l12 27 108 108V0z"
                              fill="#151513"
                    />
                    <path
                              className="octo-arm"
                              d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
                              style={
                                        Object {
                                                  "WebkitTransformOrigin": "130px 106px",
                                                  "transformOrigin": "130px 106px",
                                                }
                              }
                    />
                    <path
                              className="octo-body"
                              d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
                    />
          </svg>
</a>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <GithubCorner
    ariaLabel="Open GitHub project"
    bannerColor="#151513"
    direction="right"
    height={80}
    href="/"
    octoColor="#fff"
    style="display:none"
    width={80}
/>,
}
`;
